methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:3: error: Boolean does not take parameters
  var vuBiscuit: Boolean=vuBiscuit();
                                  ^